need to fix wordpress connection on browser

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,24 +1,25 @@
 DOMAIN_NAME=crocha-s.42.fr
 
-# MariaDB
+#MariaDB Variables
 
-MARIADB_USER=wp_user
-MARIADB_ROOT_PASSWORD=rootpass
-MARIADB_DATABASE=wordpress_db
-MARIADB_PASSWORD=wp_pass
+DB_NAME=inception_db
+DB_USER=crocha-s
+DB_PASS=123
+DB_HOST=mariadb
 
-# Wordpress
+#WordPress Variables
 
 WP_URL=crocha-s.42.fr
 WP_TITLE=Inception
 
-#WP admin credentials
-WP_ADMIN_USER=crocha
-WP_ADMIN_PASS=12345
-WP_ADMIN_EMAIL=crocha-s@student.42.fr
-  
-#User credentials
+#Admin Credentials
+
+WP_ADM_USER=crocha-s
+WP_ADM_PASS=123
+WP_ADM_EMAIL=crocha-s@student.42sp.org.br
+
+#User Credentials
 WP_USER=user
 WP_USER_PASS=123
 WP_USER_ROLE=editor
-WP_USER_EMAIL=user@42.fr  
+WP_USER_EMAIL=user@42.com
