--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,15 +1,15 @@
 FROM debian:bullseye
 
-RUN apt update && apt upgrade -y && apt install -y mariadb-server
+RUN apt-get update -y && \
+    apt-get upgrade -y && \
+    apt-get install -y mariadb-server
 
 EXPOSE 3306
 
-COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/
-
+COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/.
 COPY tools/setup.sh .
 
 RUN chmod +x setup.sh
-
-RUN mkdir -p /run/mysqld
+RUN mkdir -p /run/mysql
 
 ENTRYPOINT ["./setup.sh"]
