refactored for 42 vm

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,25 +1,9 @@
 DOMAIN_NAME=crocha-s.42.fr
+USER_INCEPTION = crocha-s
 
-#MariaDB Variables
+#MySQL variables:
 
-DB_NAME=inception_db
-DB_USER=crocha-s
-DB_PASS=123
-DB_HOST=mariadb
-
-#WordPress Variables
-
-WP_URL=crocha-s.42.fr
-WP_TITLE=Inception
-
-#Admin Credentials
-
-WP_ADM_USER=crocha-s
-WP_ADM_PASS=123
-WP_ADM_EMAIL=crocha-s@student.42sp.org.br
-
-#User Credentials
-WP_USER=user
-WP_USER_PASS=123
-WP_USER_ROLE=editor
-WP_USER_EMAIL=user@42.com
+MYSQL_DATABASE = WordPressDB
+MYSQL_USER = crocha-s
+MYSQL_PASSWORD = 123456
+MYSQL_ROOT_PASSWORD = 654321
