--- a/srcs/.env
+++ b/srcs/.env
@@ -7,3 +7,8 @@ MYSQL_DATABASE = WordPressDB
 MYSQL_USER = crocha-s
 MYSQL_PASSWORD = 123456
 MYSQL_ROOT_PASSWORD = 654321
+
+#Nginx certificates
+
+CERTS_KEY=/etc/ssl/private/nginx-selfsigned.key
+CERTS_CRT=/etc/ssl/certs/nginx-selfsigned.crt
