--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,14 +9,15 @@ services:
       context: ./requirements/mariadb            #Dockerfile folder
       args:                                      #Arguments passed during image build (from .env)
         - MYSQL_DATABASE
-        - MYSQL_USER
-        - MYSQL_PASSWORD
-        - MYSQL_ROOT_PASSWORD
     networks:
       - inception                                #Network in which this container belongs (allows communication between services)
     volumes:
       - mariadb:/var/lib/mysql                   #Persistant volume mounted on MariaDB data folder
     restart: always                              #Restart if it stops or at system reboot
+    secrets:
+      - mysql_user
+      - mysql_password
+      - mysql_root_password
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
@@ -30,12 +31,13 @@ services:
       context: ./requirements/wordpress
       args:
         - MYSQL_DATABASE
-        - MYSQL_USER
-        - MYSQL_PASSWORD
     networks:
       - inception
     volumes:
       - wordpress:/var/www/html
+    secrets:
+      - mysql_user
+      - mysql_password
     restart: always
     depends_on:
       mariadb:
@@ -62,6 +64,13 @@ services:
       - mariadb
       - wordpress
 
+secrets:
+  mysql_user:
+    file: ../secrets/mysql_user.txt
+  mysql_password:
+    file: ../secrets/mysql_password.txt
+  mysql_root_password:
+    file: ../secrets/mysql_root_password.txt
 
 volumes:
   mariadb:
