--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -21,6 +21,11 @@ RUN	apt-get update -y && \
 		curl && \
 	rm -rf /var/lib/apt/lists/*
 
+# Install wp-cli
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+    chmod +x wp-cli.phar && \
+    mv wp-cli.phar /usr/local/bin/wp
+
 #Setup PHP -> Nginx communication
 RUN mv /etc/php/7.4/fpm/pool.d/www.conf /etc/php/7.4/fpm/pool.d/www.conf.default
 COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/
