--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -18,6 +18,10 @@ services:
       - mysql_user
       - mysql_password
       - mysql_root_password
+      - wp_user
+      - wp_admin_user
+      - wp_user_password
+      - wp_admin_password
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
@@ -38,6 +42,10 @@ services:
     secrets:
       - mysql_user
       - mysql_password
+      - wp_user
+      - wp_admin_user
+      - wp_user_password
+      - wp_admin_password
     restart: always
     depends_on:
       mariadb:
@@ -71,19 +79,27 @@ secrets:
     file: ../secrets/mysql_password.txt
   mysql_root_password:
     file: ../secrets/mysql_root_password.txt
+  wp_user:
+    file: ../secrets/wp_user.txt
+  wp_admin_user:
+    file: ../secrets/wp_admin_user.txt
+  wp_user_password:
+    file: ../secrets/wp_user_password.txt
+  wp_admin_password:
+    file: ../secrets/wp_admin_password.txt
 
 volumes:
   mariadb:
     driver: local
     driver_opts:
       type: none
-      device: /home/${USER_INCEPTION}/data/mariadb
+      device: /home/crocha-s/data/mariadb
       o: bind
   wordpress:
     driver: local
     driver_opts:
       type: none
-      device: /home/${USER_INCEPTION}/data/wordpress
+      device: /home/crocha-s/data/wordpress
       o: bind
       
 
