--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
-DOMAIN_NAME=crocha-s.42.fr
-USER_INCEPTION = crocha-s
+DOMAIN_NAME=userlogin.42.fr
+USER_INCEPTION = userlogin
 
 #MySQL variables:
 
